# rustpulse

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  audit.toml  body.json  build_rs_cov.profraw  compose.prod.yaml  compose.staging.yaml  compose.yaml  deny.toml  docker-compose.test.yml  docker-compose.yml  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  deploy-staging.yml  general.yml  no-pr.yml  rollback-staging.yaml
backend/: .env  .env.test  Cargo.toml  clippy.toml  metrics_data.jsonl
backend/logs/: info.2025-07-02  info.2025-07-10  info.2025-08-14  info.2025-09-03  info.2025-11-17  info.2025-11-18  info.2025-11-19
backend/src/: adapters.rs  app.rs  cli.rs  config.rs  core.rs  errors.rs  features.rs  handlers.rs  infra.rs  lib.rs  main.rs  routes.rs
backend/src/adapters/: input.rs  jsonl_telemetry_repo.rs  mock_repo.rs  mock_telemetry.rs  output.rs  postgres_metrics_repo.rs  telemetry_source_repo.rs  tracing.rs
backend/src/adapters/input/: http.rs  scratch.rs
backend/src/adapters/input/http/: favicon_handler.rs  health_handler.rs  request_tracing.rs  root_handler.rs  telemetry_handler.rs
backend/src/adapters/output/: fault_injecting_repo.rs  jsonl_repo.rs  postgres_db.rs  postgres_telemetry_repo.rs
backend/src/app/: errors.rs  metrics_service.rs  telemetry_service.rs
backend/src/cli/: commands.rs
backend/src/core/: domains.rs  port.rs
backend/src/core/application/: telemetry.rs
backend/src/core/application/telemetry/: usecases.rs
backend/src/core/application/telemetry/ports/: input.rs  output.rs
backend/src/core/application/telemetry/ports/input/: telemetry_ingest_usecase.rs  telemetry_query_usecase.rs
backend/src/core/application/telemetry/ports/output/: telemetry_repository.rs
backend/src/core/application/telemetry/usecases/: telemetry_service.rs
backend/src/core/domains/: node.rs  node_telemetry.rs  telemetry.rs
backend/src/core/port/: telemetry_ingest_case.rs  telemetry_mock_repo.rs  telemetry_query_case.rs  telemetry_repo.rs
backend/src/domain/: model.rs  port.rs
backend/src/features/aerospace/: node.rs
backend/src/features/biomedical/: device.rs
backend/src/handlers/: cli.rs  health.rs  http.rs  metrics.rs  root.rs
backend/src/handlers/cli/: args.rs  commands.rs
backend/src/handlers/http/: favicon_handler.rs  health__handler.rs  health_handler.rs  root_handler.rs  telemetry_handler.rs
backend/src/infra/: auth.rs  db.rs  logging.rs  mock_telemetry.rs  notifier.rs  startup.rs  tracing.rs
backend/src/routes/: health.rs
backend/src/tests/: api.rs  common.rs
deploy/env/: rustpulse.prod.env.example  rustpulse.staging.env.example
deploy/systemd/: rustpulse-staging.service  rustpulse.service
docs/: case-study.md  crc32.md  deployment_runbook.md  observability.md  persistence.md  week1_Architecture.md  week2_HexaArch_DB  week2_HexaArch_DB.md
docs/deploy/: architecture.md  runbook.md  staging-checklist.md
frontend/: Cargo.toml
frontend/src/: main.rs
logs/: info.2025-05-23
migrations/: 0001_create_telemetry.sql
src/: adapters.rs  config.rs  core.rs  errors.rs  infra.rs  lib.rs  main.rs
src/adapters/: input.rs  output.rs
src/adapters/input/: http.rs  (+1 more)
src/core/: application.rs  domains.rs
src/infra/: logging.rs  mock_telemetry.rs  startup.rs  tracing.rs
src/tests/: api.rs  common.rs
tests/: adapter_auth_crypto.rs  application_auth_usecases.rs  core_auth.rs
(+32 files in other folders)
