[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.3"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
tower-http = { version = "0.6.4", features = ["trace"] }
uuid = "1.17.0"

[package.metadata.cargo-machete]
ignored = ["serde_json", "serde", "thiserror",  "anyhow"]

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
