[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Backend of RustPulse"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VinEckSie/rustpulse"
documentation = "https://docs.rs/rustpulse"

#needed for crates.io
[[bin]]
name = "rustpulse"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
dotenvy = "0.15.7"
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
tower-http = { version = "0.6.4", features = ["trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

rand = "0.9.2"
async-trait = "0.1.88"

[package.metadata.cargo-machete]
ignored = ["serde_json", "serde", "thiserror", "anyhow"]

[features]
default = ["aero"]
aero = []
bio = []
tracing-backend = []
#parquet = []
#mock_data = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
